--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!--  -->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/lookindependent.svg" />
+    <link rel="icon" type="image" href="/public/Haranathx.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iTask - Your Task Planner</title>
   </head>
